# orangutan-backend

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  readme.md
app/: database.py  main.py
app/dependencies/: auth.py
app/exercises/: models.py  repositories.py  router.py  services.py
app/series/: models.py  repositories.py  router.py  services.py
app/training_sessions/: models.py  repositories.py  router.py  services.py
app/trainings/: models.py  repositories.py  router.py  services.py
app/users/: models.py  queries.py  repositories.py  router.py  services.py
app/utils/: jwt.py
